tests/negative/semantic/wrong_arg_count_epochtohour/input.ci
void main() {
    print(toString(epochToHour()) + "\n");
}
